--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li class="header-menu__item"><a href="#" class="header-menu__link">Events</a></li>
         <li class="header-menu__item"><a href="#" class="header-menu__link">Rodrigues</a></li>
       </ul>
-      <!-- /.header-menu -->
+      <!-- /.header-menu j,thyenm d nav-->
 
     </div>
     <!-- /.container -->
