fix: fied seach, menu buton

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       <!-- /.container -->
     </div>
     <!-- /.navbar-bottom -->
+    <form action="https://wa.me/79103048520?text=Здравствуйте%2C+у+меня+есть+вопрос" target="_blank">
+      <button>Связаться со мной</button>
+    </form>
   </header>
   <!-- /.header -->
 </body>
