--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
       </div>
       <!-- /.hotel-info -->
       <div class="hotel-grid">
-        <div class="slider">
+        <div class="slider hotel__slider">
           <!-- Slider main container -->
           <div class="swiper">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide"> <img src="img/slide1.jpg" alt="">Отель 1</div>
-              <div class="swiper-slide"> <img src="img/slide2.jpg" alt="">Отель 2</div>
-              <div class="swiper-slide"> <img src="img/slide3.jpg" alt="">Отель 3</div>
-              ...
+              <div class="swiper-slide"> <img class="swiper-slide__image" src="img/slide1.jpg" alt="">Отель 1</div>
+              <div class="swiper-slide"> <img class="swiper-slide__image" src="img/slide2.jpg" alt="">Отель 2</div>
+              <div class="swiper-slide"> <img class="swiper-slide__image" src="img/slide3.jpg" alt="">Отель 3</div>
+              
             </div>
             <!-- If we need pagination -->
           <!-- <div class="swiper-pagination"></div> точки на слайдаре-->
@@ -178,7 +178,7 @@
           <div class="map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17376.990235548004!2d79.79690791144881!3d7.571384598237923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2c96110de8289%3A0x3fd7668bc2d85eb9!2sGrand%20Hilton%20Hotel!5e0!3m2!1sru!2sru!4v1632643844648!5m2!1sru!2sru"
-              width="347" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              width="100%" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           
           </div>
           <!-- /.map -->
