--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide hotel-slider__item"> <img class="swiper-slide__image" src="img/slide1.jpg" alt="">Отель 1</div>
-              <div class="swiper-slide hotel-slider__item"> <img class="swiper-slide__image" src="img/slide2.jpg" alt="">Отель 2</div>
-              <div class="swiper-slide hotel-slider__item"> <img class="swiper-slide__image" src="img/slide3.jpg" alt="">Отель 3</div>
+              <div class="swiper-slide hotel-slider__item"> <img class="hotel-slider__image" src="img/slide1.jpg" alt="">Отель 1</div>
+              <div class="swiper-slide hotel-slider__item"> <img class="hotel-slider__image" src="img/slide2.jpg" alt="">Отель 2</div>
+              <div class="swiper-slide hotel-slider__item"> <img class="hotel-slider__image" src="img/slide3.jpg" alt="">Отель 3</div>
               
             </div>
             <!-- If we need pagination -->
